--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ redis:
 
 web:
   build: .
-  command: bundle exec rails s
+  command: bundle exec rails s -b 0.0.0.0
   volumes:
     - .:/myapp
   ports:
@@ -23,5 +23,5 @@ web:
   links:
     - db
     - redis
-  stdin_open: true
-  tty: true
+  #stdin_open: true
+  #tty: true
