--- a/config/cable.yml
+++ b/config/cable.yml
@@ -6,7 +6,8 @@ production:
 development:
   #adapter: async
   adapter: redis
-  url: redis://localhost:6379/1
+  #url: redis://localhost:6379/1
+  url: redis://<%= ENV['REDIS_PORT_6379_TCP_ADDR'] ||= ENV['DOCKER_HOST'].split('//')[1].split(':')[0] %>:<%= ENV['REDIS_PORT_6379_TCP_PORT'] ||= '6379' %>
 
 #test:
 #  adapter: async
